add store for caching characters locally, update favicons

--- a/src/app/components/character-details/character-details.component.html
+++ b/src/app/components/character-details/character-details.component.html
@@ -11,7 +11,7 @@
     </dl>
   </header>
   <dl>
-    <dt>Films</dt>
+    <dt>Films:</dt>
     <dd *ngFor="let film of character.films">{{film.title}}</dd>
   </dl>
 </div>
