--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -8,12 +8,17 @@
     font-size: 1rem;
     padding: 0.25rem;
 
-    &:hover,
-    &:active,
-    &.active,
-    &:focus {
+    &:not(:disabled):hover,
+    &:not(:disabled):active,
+    &:not(:disabled).active,
+    &:not(:disabled):focus {
         background: $gold;
         color: $black;
         outline: none;
     } 
+
+    &:disabled {
+        cursor: not-allowed;
+        opacity: 0.5;
+    }
 }
