set up autodeploy, text changes, scss tweaks

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -46,6 +46,6 @@
 <ng-template #noCharacter>
   <div class="no-characters">
     <h3>No character selected</h3>
-    <p>Pick a character from the sidebar to learn more about them.</p>
+    <p>Pick a character from the menu to learn more about them.</p>
   </div>
 </ng-template>
